--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <img src="img/logo fundo branco.png" width="150" alt="minha logo">
+    <img src="img/logo-fundo-branco.png" width="150" alt="minha logo">
     <h1>Delicias Caseiras</h1>
 
     <h2>Delivery de Marmitas</h2>
@@ -25,7 +25,7 @@
 
         <p>Bife com fritas <b>R$ 19,90</b></p> 
 
-    <img src="img/bife com fritas.jpg" width="170" alt="bife com fritas"> 
+    <img src="img/bife-com-fritas.jpg" width="170" alt="bife com fritas"> 
 
         <button onclick="window.location.href='https://app.cardapioweb.com/_delicias_caseiras?id=1824090#produto'">
             Peça Agora!
@@ -37,7 +37,7 @@
 
 </b></p><br><br>
 
-    <img src="img/feijoada com coca.jpg" width="170" alt="feijoada com coca cola">
+    <img src="img/feijoada-com-coca.jpg" width="170" alt="feijoada com coca cola">
 
     <button onclick="window.location.href='https://app.cardapioweb.com/_delicias_caseiras?id=1824102#produto'">
     Peça Agora!
@@ -57,4 +57,5 @@
     
 </body>
 </html>
+
 
